--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <div class="home-content reveal">
       <h1>
         Portfolio<br>
-        L.BIB · Luis Blasco-Ibáñez Berbel
+        Luis Blasco-Ibáñez Berbel
       </h1>
       <p>
         Diseño industrial y desarrollo de producto con enfoque técnico,
