--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio Luis Blasco-Ibáñez Berbel</title>
+  <title>Portfolio · Luis Blasco-Ibáñez Berbel</title>
 
   <!-- Tipografía -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -44,7 +44,10 @@
       transform:translateY(40px);
       transition:opacity var(--transition),transform var(--transition);
     }
-    .reveal.visible{opacity:1;transform:translateY(0)}
+    .reveal.visible{
+      opacity:1;
+      transform:translateY(0);
+    }
 
     /* ==================================================
        CURSOR EDITORIAL
@@ -74,9 +77,18 @@
       overflow:hidden;
       transition:background var(--transition),color var(--transition),transform var(--transition);
     }
-    .btn span{display:inline-block;transition:transform var(--transition)}
-    .btn:hover{background:#fff;color:#000;transform:translateY(-2px)}
-    .btn:hover span{transform:translateX(4px)}
+    .btn span{
+      display:inline-block;
+      transition:transform var(--transition);
+    }
+    .btn:hover{
+      background:#fff;
+      color:#000;
+      transform:translateY(-2px);
+    }
+    .btn:hover span{
+      transform:translateX(4px);
+    }
 
     /* ==================================================
        HOME
@@ -88,16 +100,26 @@
       background:#000000;
     }
     .home-content{max-width:960px}
+
     .home h1{
       font-size:clamp(48px,6vw,86px);
       font-weight:500;
       line-height:1.05;
-      margin-bottom:36px;
+      margin-bottom:40px;
     }
+
+    .home h1 .author{
+      display:block;
+      font-size:0.75em;
+      line-height:1.1;
+      opacity:0.72;
+      margin-top:16px;
+    }
+
     .home p{
       font-size:18px;
       color:var(--text-muted);
-      max-width:540px;
+      max-width:560px;
       margin-bottom:56px;
     }
 
@@ -267,7 +289,11 @@
     <div class="home-content reveal">
       <h1>
         Portfolio<br>
-        Luis Blasco-Ibáñez Berbel
+        <span class="author">
+          Luis<br>
+          Blasco-Ibáñez<br>
+          Berbel
+        </span>
       </h1>
       <p>
         Diseño industrial y desarrollo de producto con enfoque técnico,
@@ -406,28 +432,28 @@
 
   <!-- JS -->
   <script>
-    const reveals=document.querySelectorAll('.reveal');
-    const observer=new IntersectionObserver(entries=>{
-      entries.forEach(e=>{
-        if(e.isIntersecting) e.target.classList.add('visible');
+    const reveals = document.querySelectorAll('.reveal');
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting) entry.target.classList.add('visible');
       });
-    },{threshold:.15});
-    reveals.forEach(el=>observer.observe(el));
+    }, { threshold: 0.15 });
+    reveals.forEach(el => observer.observe(el));
 
-    const cursor=document.querySelector('.cursor');
-    const interactive=document.querySelectorAll('a,.project');
-    document.addEventListener('mousemove',e=>{
-      cursor.style.left=e.clientX+'px';
-      cursor.style.top=e.clientY+'px';
+    const cursor = document.querySelector('.cursor');
+    const interactive = document.querySelectorAll('a, .project');
+    document.addEventListener('mousemove', e => {
+      cursor.style.left = e.clientX + 'px';
+      cursor.style.top = e.clientY + 'px';
     });
-    interactive.forEach(el=>{
-      el.addEventListener('mouseenter',()=>{
-        cursor.style.opacity=1;
-        cursor.style.transform='translate(-50%,-50%) scale(1.4)';
+    interactive.forEach(el => {
+      el.addEventListener('mouseenter', () => {
+        cursor.style.opacity = 1;
+        cursor.style.transform = 'translate(-50%, -50%) scale(1.4)';
       });
-      el.addEventListener('mouseleave',()=>{
-        cursor.style.opacity=0;
-        cursor.style.transform='translate(-50%,-50%) scale(1)';
+      el.addEventListener('mouseleave', () => {
+        cursor.style.opacity = 0;
+        cursor.style.transform = 'translate(-50%, -50%) scale(1)';
       });
     });
   </script>
