--- a/index.html
+++ b/index.html
@@ -289,11 +289,7 @@
     <div class="home-content reveal">
       <h1>
         Portfolio<br>
-        <span class="author">
-          Luis<br>
-          Blasco-Ibáñez<br>
-          Berbel
-        </span>
+        <span class="author">Luis Blasco-Ibáñez Berbel</span>
       </h1>
       <p>
         Diseño industrial y desarrollo de producto con enfoque técnico,
