--- a/index.html
+++ b/index.html
@@ -108,11 +108,12 @@
       margin-bottom:40px;
     }
 
+    /* 👇 AJUSTE CLAVE */
     .home h1 .author{
       display:block;
-      font-size:0.75em;
+      font-size:0.82em;      /* un poco más grande */
       line-height:1.1;
-      opacity:0.72;
+      color:#ffffff;         /* blanco puro */
       margin-top:16px;
     }
 
